--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -40,9 +40,11 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
-				<!-- div class="content box style2" --!>
-				<!-- /div -->
-				<!-- <a href="#two" class="button style2 down anchored">Next</a> --!>
+				<!-- div class="content box style2" -->
+				<div id = "album01">
+					<img src="images/album01.jpg" </img>
+				</div>
+				<!-- <a href="#two" class="button style2 down anchored">Next</a> -->
 			</section>
 
 		<!-- Two -->
