Changed logo along menu bar

--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Cuban Doll</h1>
+				<h1><img src="images/gtatextwhite.jpg" height = "93" width = "116"></img></h1>
 				<nav>
 					<ul>
 						<li><a href="#music">Music</a></li>
@@ -42,7 +42,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<!-- div class="content box style2" -->
 				<div id = "album01">
-					<img src="images/album01.jpg" </img>
+					<img src="images/album01.jpg" height = "256" width = "256" position = "left" </img>
 				</div>
 				<!-- <a href="#two" class="button style2 down anchored">Next</a> -->
 			</section>
