Added GTA stlyed text to the menu bar, and added social media links to menu bar buttons

--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -22,12 +22,12 @@
 				<h1><img src="images/gtatextwhite.jpg" height = "93" width = "116"></img></h1>
 				<nav>
 					<ul>
-						<li><a href="#music">Music</a></li>
-						<li><a href="#tour">Tour</a></li>
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-						<li><a href="#" class="icon fa-apple"><span class="label">AppleMusic</span></a></li>
+						<li><a href="#music"><img src="images/gtamusic.jpg" width ="88" height = "25"></a></li>
+						<li><a href="#tour"><img src="images/gtatour.jpg" width = "75" height = "25"></a></li>
+						<li><a href="https://twitter.com/CubanDaSavage" target = "_blank" class="icon fa-twitter"></a><span class="label"></span></a></li>
+						<li><a href="https://www.instagram.com/cubanndasavage/?hl=en" target = "_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://soundcloud.com/cuban-da-savage-doll" target = "_blank" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
+						<li><a href="https://itunes.apple.com/us/artist/cuban-doll/1181792963" target = "_blank" class="icon fa-apple"><span class="label">AppleMusic</span></a></li>
 					</ul>
 				</nav>
 			</header>
