--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -40,10 +40,9 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
+				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/392938508&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+				<img src="images/album01.jpg" height = "256" width = "256" position = "left" </img>
 				<!-- div class="content box style2" -->
-				<div id = "album01">
-					<img src="images/album01.jpg" height = "256" width = "256" position = "left" </img>
-				</div>
 				<!-- <a href="#two" class="button style2 down anchored">Next</a> -->
 			</section>
 
