--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -40,6 +40,7 @@
 
 		<!-- One -->
 			<section id="one" class="main style2 right dark fullscreen">
+				<img src = "images/gtamusic.jpg"></img>
 				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/392938508&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 				<img src="images/album01.jpg" height = "256" width = "256" position = "left" </img>
 				<!-- div class="content box style2" -->
@@ -59,11 +60,13 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>Tour Dates</h2>
+						<h2><img src = "images/gtatourdates.jpg" </img></h2>
 						<p></p>
 					</header>
+					<img src = "images/cuban04.jpg"></img>
 
 					<!-- Gallery  -->
+					<!--
 						<div class="gallery">
 							<article class="from-left">
 								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
@@ -84,11 +87,13 @@
 								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
+					-->
 
 				</div>
 			</section>
 
 		<!-- Contact -->
+		<!--
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
@@ -107,6 +112,7 @@
 					</div>
 				</div>
 			</section>
+		-->
 
 
 
