Added updated tour dates section, and changed video clip at section one

--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -64,7 +64,60 @@
 						<h2><img src = "images/gtatourdates.jpg" </img></h2>
 						<p></p>
 					</header>
-					<img src = "images/cuban04.jpg"></img>
+					<ul>
+						<li> Saturday, March 17</li>
+						<li> Oakland, California</li>
+						<li> Fox Theatre </li>
+						<li><a href = "https://www.ticketmaster.com/Cuban-Doll-tickets/artist/2459088" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Friday, March 23</li>
+						<li> Reno, Nevada</li>
+						<li> Cargo Concert Hall</li>
+						<li><a href = "https://www.ticketmaster.com/Cuban-Doll-tickets/artist/2459088" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Saturday, March 24</li>
+						<li> Eugene, Oregon</li>
+						<li> McDonald Theatre</li>
+						<li><a href = "https://ev12.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS:TWS:PMCD18:PMCD0324:&linkID=twspok" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Sunday, March 25</li>
+						<li> Arcata, California</li>
+						<li> Arcata Community Center</li>
+						<li><a href = "https://www.ticketfly.com/purchase/event/1642133" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Friday, April 6</li>
+						<li> Santa Ana, California</li>
+						<li> The Observatory</li>
+						<li>SOLD OUT<br></br></li>
+					</ul>
+					<ul>
+						<li> Tuesday, April 10</li>
+						<li> Fresno, California</li>
+						<li> Azteca Theatre</li>
+						<li><a href = "https://www.eventbrite.com/e/sob-x-rbe-live-tickets-42801888601?aff=es2" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Wednesday, April 11</li>
+						<li> Chico, California</li>
+						<li> Senator Theatre</li>
+						<li><a href = "https://www.ticketweb.com/event/sob-x-rbe-cuban-doll-senator-theatre-tickets/8073995?pl=jmax" target = "_blank">Tickets</a><br></br></li>
+					</ul>
+					<ul>
+						<li> Friday, April 13</li>
+						<li> Santa Cruz, California</li>
+						<li> The Catalyst</li>
+						<li>SOLD OUT<br></br></li>
+					</ul>
+					<ul>
+						<li> Saturday, April 14</li>
+						<li> Sacramento, California</li>
+						<li> Ace of Spades</li>
+						<li><a href = "https://www.eventbrite.com/e/sob-x-rbe-ace-of-spades-tickets-43862462807" target = "_blank">Tickets</a><br></br></li>
+					</ul>
 
 					<!-- Gallery  -->
 					<!--
