Added styling to #tour section of main.css

--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -58,7 +58,7 @@
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="tour" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2><img src = "images/gtatourdates.jpg" </img></h2>
