Changed gif behind section 1, and added spotify button to top bar

--- a/CubanDoll/index.html
+++ b/CubanDoll/index.html
@@ -25,6 +25,7 @@
 						<li><a href="https://www.instagram.com/cubanndasavage/?hl=en" target = "_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://soundcloud.com/cuban-da-savage-doll" target = "_blank" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
 						<li><a href="https://itunes.apple.com/us/artist/cuban-doll/1181792963" target = "_blank" class="icon fa-apple"><span class="label">AppleMusic</span></a></li>
+						<li><a href="https://open.spotify.com/artist/32DuKytBMZn90iqyh2HEdc" target = "_blank" class="icon fa-spotify"><span class="label">Spotify</span></a></li>
 					</ul>
 				</nav>
 			</header>
